# minimalimageviewer

./: .gitignore  CMakeLists.txt
BP/: CMakeCache.txt
cmake/: BundleDeps.cmake
src/: essential_stubs.cpp  image_drawing.cpp  image_io.cpp  logging.cpp  logging.h  main.cpp  main_win32.cpp  ocio_shim.h  resource.h  text_renderer.cpp  text_renderer.h  ui_handlers.cpp  ui_handlers_win32.cpp  viewer.cpp  viewer.h  vulkan_progress.cpp  vulkan_renderer.cpp  vulkan_renderer.h
